# RAG-Knowledge-Assistant

./: .dockerignore  .env.example  .gitignore  REQUIREMENTS.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
md-files/: README.md  docker-commands.md  git-commands.md  startup.md
services/augmentation/: Dockerfile  main.py  pyproject.toml  readme.md
services/augmentation/app/: compressor.py  evaluator.py  generator.py  judge.py  main.py  models.py  prompt_builder.py  search.py
services/backend/: Dockerfile  chat_conversations.py  chat_models.py  main.py  pyproject.toml  routes.py  testdummys.py
services/frontend/: Dockerfile  app.py  main.py  pyproject.toml
services/frontend/components/: chat_settings_panel.py  sidebar.py  styles.py
services/frontend/services/: backend_client.py  frontend_actions.py
services/frontend/ui/: css_styling.py  render_functions.py  sidebar.py
services/frontend/views/: chat.py  documents.py  history.py  pages.py  statistics.py
services/generation/: Dockerfile  agent.py  pyproject.toml
services/ingestion/: Dockerfile  pyproject.toml  worker.py
services/retrieval/: Dockerfile  main.py  pyproject.toml
shared/: pyproject.toml  schemas.py
