[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = [
    "services/augmentation",
    "services/backend",
    "services/frontend",
    "services/ingestion",
    "services/retrieval",
    "services/generation",
    "shared",
]

[project]
name = "rag-uni-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []