[project]
name = "shared"
version = "0.1.0"
description = "Shared models and utilities"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared"]

[tool.setuptools.package-dir]
shared = "."
