# Location: apps/augmentation/pyproject.toml
[project]
name = "augmentation"
version = "0.1.0"
dependencies = [
    "shared",
    "requests",
]

# Legacy framework dependencies kept for presentation notes:
# unused_dependencies = ["openai", "langchain"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
