[project]
name = "augmentation"
version = "0.1.0"
dependencies = [
    "shared",
    "requests",
    "fastapi",
    "uvicorn",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# In services/augmentation/pyproject.toml
[tool.hatch.build.targets.wheel]
packages = ["app"]